contact spacing fix

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -196,7 +196,8 @@ text-shadow: 0px 0px 18.91876983642578px #78BBF0, 0px 0px 18.91876983642578px rg
 }
 .mobileHeading{
     text-align: center;
-    height: 20vh;
+    height: 15vh;
+    margin-bottom: -2vh;
     display: flex;
     align-items: center;
     justify-content:center ;
